Add and update plots: line, bar, scatter, pie, subplot, and histogram

--- a/src/1-line-plot.ipynb
+++ b/src/1-line-plot.ipynb
@@ -14,7 +14,29 @@
    "outputs": [],
    "source": [
     "# TASK: Create a line plot with x values ranging from 0 to 10 and y values as the square of x.\n",
-    "# Customize the plot by adding a title, labels for both axes, and a grid."
+    "# Customize the plot by adding a title, labels for both axes, and a grid.\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "# Generate x values from 0 to 10\n",
+    "x = np.linspace(0, 10, 100)\n",
+    "\n",
+    "# Compute y values as the square of x\n",
+    "y = x ** 2\n",
+    "\n",
+    "# Create the line plot\n",
+    "plt.plot(x, y, color='blue')\n",
+    "\n",
+    "# Add title and axis labels\n",
+    "plt.title('Line Plot of y = x²')\n",
+    "plt.xlabel('X Axis')\n",
+    "plt.ylabel('Y = X Squared')\n",
+    "\n",
+    "# Add grid to the plot\n",
+    "plt.grid(True)\n",
+    "\n",
+    "# Display the plot\n",
+    "plt.show()\n"
    ]
   }
  ],
