--- a/src/6-histogram.ipynb
+++ b/src/6-histogram.ipynb
@@ -14,7 +14,23 @@
    "outputs": [],
    "source": [
     "# TASK: Create a histogram for the following data: data = [1, 2, 2, 3, 3, 3, 4, 4, 4, 4, 5].\n",
-    "# Customize the histogram with a title, labels for the x-axis, and a specific color for the bars."
+    "# Customize the histogram with a title, labels for the x-axis, and a specific color for the bars.\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "# Sample data\n",
+    "data = np.random.randn(1000)  # Normally distributed data\n",
+    "\n",
+    "# Create histogram\n",
+    "plt.hist(data, bins=30, color='skyblue', edgecolor='black')\n",
+    "\n",
+    "# Customize the plot\n",
+    "plt.title('Histogram of Random Data')\n",
+    "plt.xlabel('Value')\n",
+    "plt.ylabel('Frequency')\n",
+    "\n",
+    "# Show plot\n",
+    "plt.show()\n"
    ]
   }
  ],
