--- a/src/2-bar-plot.ipynb
+++ b/src/2-bar-plot.ipynb
@@ -14,7 +14,22 @@
    "outputs": [],
    "source": [
     "# TASK: Create a bar plot with the following data: categories = ['A', 'B', 'C', 'D'] and values = [5, 7, 3, 9].\n",
-    "# Use different colors for each bar and add a title to the plot."
+    "# Use different colors for each bar and add a title to the plot.\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Data\n",
+    "categories = ['A', 'B', 'C', 'D']\n",
+    "values = [5, 7, 3, 9]\n",
+    "colors = ['red', 'blue', 'green', 'orange']  # Different color for each bar\n",
+    "\n",
+    "# Create the bar plot\n",
+    "plt.bar(categories, values, color=colors)\n",
+    "\n",
+    "# Add a title to the plot\n",
+    "plt.title('Bar Plot of Categories and Values')\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()\n"
    ]
   }
  ],
